Move FunctionType to SPI